fixed content overflow out of screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,8 +27,8 @@
 /************************ Banner ****************************/
 
 .home_container {
-  width: 100vw;
-  /* height: 100vh; */
+  /* width: 100vw; */
+  height: 100vh;
   background: rgba(31, 38, 49, 0.92);
   display: flex;
   flex-direction: column;
